[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/xp_award_row.gd" id="1"]

[node name="XPAwardRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 56)
script = ExtResource("1")

[node name="SpriteRect" type="TextureRect" parent="." unique_name_in_owner=true]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameRow" type="HBoxContainer" parent="InfoVBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="InfoVBox/NameRow" unique_name_in_owner=true]
layout_mode = 2
size_flags_horizontal = 3
text = "Agumon"

[node name="LevelLabel" type="Label" parent="InfoVBox/NameRow" unique_name_in_owner=true]
layout_mode = 2
theme_override_colors/font_color = Color(0.631, 0.631, 0.667, 1)
text = "Lv. 50"

[node name="XPBar" type="ProgressBar" parent="InfoVBox" unique_name_in_owner=true]
layout_mode = 2
custom_minimum_size = Vector2(0, 16)
max_value = 100.0
show_percentage = false

[node name="TechniqueLabel" type="Label" parent="InfoVBox" unique_name_in_owner=true]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.024, 0.714, 0.831, 1)
theme_override_font_sizes/font_size = 12
text = ""
